--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "lint": "./node_modules/.bin/eslint src/*.js",
     "prepush": "npm run lint",
-    "test": "./node_modules/.bin/mocha __tests__/**/*.spec.js",
-    "test:tdd": "./node_modules/.bin/mocha __tests__/**/*.spec.js --watch"
+    "test": "./node_modules/.bin/mocha __tests__/**/*.spec.js --require babel-register",
+    "test:tdd": "./node_modules/.bin/mocha __tests__/**/*.spec.js --require babel-register --watch"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +15,9 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015-native-modules": "^6.9.4",
+    "babel-register": "^6.26.0",
     "chai": "^4.2.0",
     "eslint": "^6.2.2",
     "eslint-config-airbnb": "^18.0.1",
